fixed text alignment on skis page at mobile

--- a/css/template-skis.less
+++ b/css/template-skis.less
@@ -49,7 +49,7 @@ section.ski-detail{
 		.wysiwyg-content div > ul > li > ul{
 			padding-left: 20px;
 		}
-		.wysiwyg-content:first-child{
+		.wysiwyg-content:first-child div{
 			text-align: left !important;
 		}
 		.ski-image + .wysiwyg-content{
